--- a/README
+++ b/README
@@ -3,23 +3,23 @@ bdftopcf
 Xorg Portable Compiled Format font compiler
 
 Runtime requirements:
-  cygwin-1.5.20-1
-  libXfont1-1.0.0-1
+  cygwin-1.5.24-2
+  libXfont1-1.2.5-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.20-1
-  autoconf2.5-2.59-2
-  automake1.9-1.9.6-1
-  binutils-20050610-1
-  cygport-0.2.2-1
-  gawk-3.1.5-2
-  gcc-core-3.4.4-1
-  libtool1.5-1.5.22-1
-  make-3.80-1
-  pkg-config-0.20-1
-  sed-4.1.5-1
-  xorg-util-macros-1.0.2-1
+  cygwin-1.5.24-2
+  autoconf2.5-2.61-1
+  automake1.9-1.9.6-2
+  binutils-20060817-1
+  cygport-0.3.5-1
+  gawk-3.1.5-4
+  gcc-core-3.4.4-3
+  libtool1.5-1.5.23a-2
+  make-3.81-1
+  pkg-config-0.21-1
+  sed-4.1.5-2
+  xorg-util-macros-1.1.5-1
 
 Canonical website:
   http://xorg.freedesktop.org/
@@ -30,31 +30,34 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack bdftopcf-1.0.0-X-src.tar.bz2
+  unpack bdftopcf-1.0.1-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./bdftopcf-1.0.0-X.cygport all
+  cygport ./bdftopcf-1.0.1-X.cygport all
 
 This will create:
-  /usr/src/bdftopcf-1.0.0-X-src.tar.bz2
-  /usr/src/bdftopcf-1.0.0-X.tar.bz2
+  /usr/src/bdftopcf-1.0.1-X-src.tar.bz2
+  /usr/src/bdftopcf-1.0.1-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the main package:
 
   /usr/bin/bdftopcf.exe
-  /usr/share/doc/Cygwin/bdftopcf-1.0.0.README
-  /usr/share/doc/bdftopcf-1.0.0/AUTHORS
-  /usr/share/doc/bdftopcf-1.0.0/COPYING
-  /usr/share/doc/bdftopcf-1.0.0/ChangeLog
-  /usr/share/doc/bdftopcf-1.0.0/README
+  /usr/share/doc/Cygwin/bdftopcf-1.0.1.README
+  /usr/share/doc/bdftopcf-1.0.1/AUTHORS
+  /usr/share/doc/bdftopcf-1.0.1/COPYING
+  /usr/share/doc/bdftopcf-1.0.1/ChangeLog
+  /usr/share/doc/bdftopcf-1.0.1/README
   /usr/share/man/man1/bdftopcf.1.gz
 
 ------------------
 
 Port Notes:
+
+----- version 1.0.1-1 -----
+Version bump for X11R7.3.
 
 ----- version 1.0.0-1 -----
 Initial Cygwin release of modular X11R7.0.
