--- a/README
+++ b/README
@@ -3,58 +3,48 @@ bdftopcf
 X.Org Portable Compiled Format font compiler
 
 Runtime requirements:
-  cygwin-1.5.24-2
-  libXfont1-1.2.5-1
+  cygwin-1.7.0-62
+  libgcc1-4.3.4-1
+  libXfont1-1.4.1-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.24-2
-  autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
-  binutils-20060817-1
-  cygport-0.3.5-1
-  gawk-3.1.5-4
-  gcc-core-3.4.4-3
-  libtool1.5-1.5.23a-2
-  make-3.81-1
-  pkg-config-0.21-1
+  autoconf2.5-2.63-10
+  automake1.11-1.11-10
+  binutils-2.19.51-1
+  cygport-0.9.10-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-1
+  make-3.81-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
-  xorg-util-macros-1.1.5-1
+  xorg-util-macros-1.3.0-1
 
 Canonical website:
   http://xorg.freedesktop.org/
 
 Canonical download:
-  http://xorg.freedesktop.org/releases/individual/
+  http://xorg.freedesktop.org/releases/individual/app/
 
 -------------------------------------------
 
 Build instructions:
-  unpack bdftopcf-1.0.1-X-src.tar.bz2
+  unpack bdftopcf-1.0.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./bdftopcf-1.0.1-X.cygport all
+  cygport ./bdftopcf-1.0.2-X.cygport all
 
 This will create:
-  /usr/src/bdftopcf-1.0.1-X-src.tar.bz2
-  /usr/src/bdftopcf-1.0.1-X.tar.bz2
+  /usr/src/bdftopcf-1.0.2-X-src.tar.bz2
+  /usr/src/bdftopcf-1.0.2-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the main package:
-
-  /usr/bin/bdftopcf.exe
-  /usr/share/doc/Cygwin/bdftopcf-1.0.1.README
-  /usr/share/doc/bdftopcf-1.0.1/AUTHORS
-  /usr/share/doc/bdftopcf-1.0.1/COPYING
-  /usr/share/doc/bdftopcf-1.0.1/ChangeLog
-  /usr/share/doc/bdftopcf-1.0.1/README
-  /usr/share/man/man1/bdftopcf.1.gz
-
-------------------
-
 Port Notes:
+
+----- version 1.0.2-1 -----
+Version bump for X11R7.5.
 
 ----- version 1.0.1-1 -----
 Version bump for X11R7.3.
